tests/neg-inline-trait/disallow-trait-in-inline-trait.scala
inline trait Foo:
    trait Bar // error
